--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="bg-white p-6 rounded-xl shadow w-full max-w-md space-y-3 text-center">
     <h1 class="text-xl font-semibold text-gray-800">UPI QR Generator</h1>
 
-    <input id="upi" placeholder="UPI ID (e.g. name@bank)" class="w-full p-2 border rounded"/>
+    <input id="upi" value="pravinga513@okaxis"placeholder="UPI ID (e.g. name@bank)" class="w-full p-2 border rounded"/>
     <input id="amt" type="number" step="0.01" placeholder="Amount (optional)" class="w-full p-2 border rounded"/>
     
     <button id="gen" class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700">Generate QR</button>
